k8s-argocd/overlays/preprod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-preprod
  labels:
    environment: preprod
    app: weather-app
