k8s-argocd/overlays/preprod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: weather-app
        image: weather-app:preprod
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
